# tax-rag

./: .env.toml.example  .gitignore  LICENSE.md  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.streamlit.example/: config.toml
scrape/: initial.py  utils.py
src/main/: utils.py  ✨_Chat.py  ✨_Tax_RAG_Chat.py
src/main/pages/: 1_📄_Regulasi.py  1_📄_Regulation.py
src/scrape/: daily.py  initial.py  utils.py
