[project]
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.24.0",
    "toml>=0.10.2",
]
description = "A RAG-based chatbot for Indonesian Income Tax (PPh) & Value-Added Tax (PPN) policy socialization, built to improve taxpayer compliance."
name = "tax-rag"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "ERA",   # eradicate
    "F",     # Pyflakes
    "FBT",   # flake8-boolean-trap
    "FIX",   # flake8-fixme
    "FLY",   # flynt
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PERF",  # Perflint
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "UP",    # pyupgrade
]
